--- a/README
+++ b/README
@@ -1,14 +1,17 @@
 ###############################################################################################
 #	Bárbara D Bitarello
 #
-#	Last modified: 25.05.2015
+#	Last modified: October.30.2015
 #	Obs: these are the additional analyses we decided to do for the JME paper.
 ###############################################################################################
-
+ 
+ Article title: "Heterogeneity of dN/dS ratios at the classical HLA class I genes over divergence time and across the allelic phylogeny"
+ Authors: Bárbara D Bitarello, Rodrigo dos Santos Francisco, Diogo Meyer
+ The final publication is available at Springer via http://dx.doi.org/10.1007/s00239-015-9713-9
 
 #Input alignment files for CODEML analyses
-#codeml_A_ars_m0.ctl  #example control file for pairwise analyses (HLA-A, NARS
-#dataset, prior to removal of recombinants, se below).
+#codeml_A_ars_m0.ctl  #example control file for pairwise analyses (HLA-A, ARS)
+#dataset, prior to removal of recombinants, see below).
 
 #The files in this directory were used for all pairwise analyses (CODEML)
 #described in the main paper.
